lib/src/compiler/tests/testdata/errors/30.out
error[E108]: unknown module `foo`
 --> line:1:1
  |
1 | import "foo"
  | ^^^^^^^^^^^^ module `foo` not found
  |